--- a/pillar-web/src/styles/plugins/_js_perfectscrollbar.sass
+++ b/pillar-web/src/styles/plugins/_js_perfectscrollbar.sass
@@ -1,4 +1,14 @@
-$color-scrollbars-base: $color-background-nav
+$color-scrollbars-base: lighten($color-background-nav, 25%)
+
+.ps-container
+	.ps-scrollbar-y
+		opacity: 0
+		transition: opacity 150ms ease-in-out
+
+	&:hover
+		.ps-scrollbar-y
+			opacity: 1
+
 
 /* perfect-scrollbar v0.6.3 */
 .ps-container
@@ -8,23 +18,6 @@ $color-scrollbars-base: $color-background-nav
 .ps-container.ps-active-x > .ps-scrollbar-x-rail,
 .ps-container.ps-active-y > .ps-scrollbar-y-rail
 	display: block
-
-.ps-container.ps-in-scrolling
-	pointer-events: none
-
-.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail
-	background-color: $color-scrollbars-base
-	opacity: 0.9
-
-.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x
-	background-color: #999
-
-.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail
-	background-color: #eee
-	opacity: 0.9
-
-.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y
-	background-color: $color-scrollbars-base
 
 .ps-container > .ps-scrollbar-x-rail
 	display: none
@@ -46,7 +39,7 @@ $color-scrollbars-base: $color-background-nav
 .ps-container > .ps-scrollbar-x-rail > .ps-scrollbar-x
 	position: absolute
 	/* please don't change 'position' */
-	background-color: #aaa
+	background-color: $color-scrollbars-base
 	-webkit-border-radius: 4px
 	-moz-border-radius: 4px
 	-ms-border-radius: 4px
@@ -79,6 +72,9 @@ $color-scrollbars-base: $color-background-nav
 		top: 5px
 		bottom: 5px
 
+#project_nav.ps-container > .ps-scrollbar-y-rail
+	margin-top: $project_header-height + 10
+
 .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y
 	position: absolute
 	/* please don't change 'position' */
@@ -90,42 +86,62 @@ $color-scrollbars-base: $color-background-nav
 	-webkit-transition: background-color .2s linear
 	-moz-transition: background-color .2s linear
 	-o-transition: background-color .2s linear
-	transition: background-color .2s linear
+	transition: background-color .2s linear, height .2s linear
 	right: 0
 	/* there must be 'right' for ps-scrollbar-y */
 	width: 5px
 
-.ps-container:hover.ps-in-scrolling
+
+.ps-container.ps-in-scrolling
 	pointer-events: none
 
-.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail
-	background-color: $color-scrollbars-base
-	opacity: 0.9
+	&.ps-x
+		.ps-scrollbar-x-rail
+			background-color: rgba($color-scrollbars-base, .2)
+			opacity: 0.9
+			.ps-scrollbar-x
+				background-color: rgba($color-scrollbars-base, .2)
 
-.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x
-	background-color: $color-scrollbars-base
+	&.ps-y
+		.ps-scrollbar-y-rail
+			background-color: rgba($color-scrollbars-base, .2)
+			opacity: 0.9
+			.ps-scrollbar-y
+				background-color: rgba($color-scrollbars-base, .2)
 
-.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail
-	background-color: #eee
-	opacity: 0.9
 
-.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y
-	background-color: $color-scrollbars-base
+.ps-container:hover
 
-.ps-container:hover > .ps-scrollbar-x-rail,
-.ps-container:hover > .ps-scrollbar-y-rail
-	opacity: 0.6
+	.ps-scrollbar-x-rail, .ps-scrollbar-y-rail
+		opacity: 0.6
 
-.ps-container:hover > .ps-scrollbar-x-rail:hover
-	background-color: #eee
-	opacity: 0.9
+		&:hover
+			background-color: rgba($color-scrollbars-base, .2)
+			opacity: 0.9
 
-.ps-container:hover > .ps-scrollbar-x-rail:hover > .ps-scrollbar-x
-	background-color: $color-scrollbars-base
+			.ps-scrollbar-x, .ps-scrollbar-y
+				background-color: $color-scrollbars-base
 
-.ps-container:hover > .ps-scrollbar-y-rail:hover
-	background-color: #eee
-	opacity: 0.9
 
-.ps-container:hover > .ps-scrollbar-y-rail:hover > .ps-scrollbar-y
-	background-color: $color-scrollbars-base
+	&.ps-in-scrolling
+		pointer-events: none
+
+		&.ps-x
+			.ps-scrollbar-x-rail
+				background-color: rgba($color-scrollbars-base, .2)
+				opacity: 0.9
+
+				.ps-scrollbar-x
+					background-color:  rgba($color-scrollbars-base, .1)
+
+		&.ps-y
+			.ps-scrollbar-y-rail
+				background-color: rgba($color-scrollbars-base, .2)
+				opacity: 0.9
+
+				.ps-scrollbar-y
+					background-color: rgba($color-scrollbars-base, .1)
+
+
+
+
